# autoblender

./: .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  README.md  pyproject.toml  requirements.txt
autoblender/: __main__.py  autoblender.py  create_available_settings.py  renderer_processor.py  settings_parser.py
config/: render_settings.template.yml
src/autoblender/: autoblender.py  create_available_settings.py  renderer_processor.py
src/renderer-cli/: autoblender.py  create_available_settings.py  logger.py  renderer_processor.py  settings_parser.py
test/: test_render_processor.py
test/resources/: available_settings_correct.yml
test/test-reports/: .gitignore
tests/: render_processor_tests.py  rendere_processor_tests.py
tests/resources/: basic.blend
